# agi-system

./: README.md  pyproject.toml  requirements.txt  setup.py
architecture/architecture_normalized/: AGI Architecture_docx.txt  AGI Summary Paper_docx.txt  ARCHITECTURE_DATA_STRUCTURES_docx.txt  ASP Architecture Draft 1_docx.txt  ASP Architecture Summary Canvas - AA Overview_docx.txt  ASP Architecture_pptx.txt  Architecture – Ack State Machine (cmb)_docx.txt  Architecture – Agent Loop And Behavior Matrix (v1)_docx.txt  Architecture – Cognitive Executive (aem) (v1)_docx.txt  Architecture – Directive And Intent Specification_docx.txt  Architecture – Executive Message Contracts (v1)_docx.txt  Architecture – Intent Object Schema_docx.txt  Architecture – Llm-based Intent Extraction Interface_docx.txt  Architecture – Objective Taxonomy And Priority Model (v1)_docx.txt  Architecture – Question Generation And Curiosity Subsystem (v1)_docx.txt  Architecture – Question Template Schema (v1)_docx.txt  Architecture – Reflection And Self-assessment Layer (v1)_docx.txt  Architecture – Section 10 Error Handling And Recovery_docx.txt  Architecture – Section 11 Learning And Behavior Extraction_docx.txt  (+40 more)
artifacts/: Generated_Plan_20260130_144254.docx  Generated_Plan_20260131_103202.docx
data/: README.md
logs/: intent_log.jsonl  system.jsonl
notebooks/: README.md
tools/: README.md  agi_bundle.py  agi_demo_test_bundle.py  bundle_cmb_transport.ps1  concat_repo_bundle.ps1  docx_to_text.py  drift_scanner.py  filelayout.txt  generate_filelayout.ps1  repo_bundle.ps1  test_openai.py
(+150 files in other folders)
